--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -35,19 +35,20 @@
 	"commands.simplyhotsprings.help.locationinfo.5": "   Checks the biome at the position and whether Hot Springs can generate there.",
 	"commands.simplyhotsprings.help.locationinfo.6": "/simplyhotsprings locationinfo <biome>",
 	"commands.simplyhotsprings.help.locationinfo.7": "   Checks the given biome and whether Hot Springs can generate there.",
-	"commands.simplyhotsprings.help.biomeslist.0": "/simplyhotsprings biomeslist all",
+	"commands.simplyhotsprings.help.biomeslist.0": "/simplyhotsprings biomeslist all [<page>]",
 	"commands.simplyhotsprings.help.biomeslist.1": "   Lists all biomes known by Simply Hot Springs.",
-	"commands.simplyhotsprings.help.biomeslist.2": "/simplyhotsprings biomeslist with",
+	"commands.simplyhotsprings.help.biomeslist.2": "/simplyhotsprings biomeslist with [<page>]",
 	"commands.simplyhotsprings.help.biomeslist.3": "   Lists all biomes known by Simply Hot Springs that CAN generate Hot Springs.",
-	"commands.simplyhotsprings.help.biomeslist.4": "/simplyhotsprings biomeslist without",
+	"commands.simplyhotsprings.help.biomeslist.4": "/simplyhotsprings biomeslist without [<page>]",
 	"commands.simplyhotsprings.help.biomeslist.5": "   Lists all biomes known by Simply Hot Springs that CANNOT generate Hot Springs.",
-	"commands.simplyhotsprings.help.biometypes.0": "/simplyhotsprings biometypes",
+	"commands.simplyhotsprings.help.biometypes.0": "/simplyhotsprings biometypes [<page>]",
 	"commands.simplyhotsprings.help.biometypes.1": "   Lists all Biome Dictionary Types.",
-	"commands.simplyhotsprings.help.biometypes.2": "/simplyhotsprings biometypes <biome_type>",
+	"commands.simplyhotsprings.help.biometypes.2": "/simplyhotsprings biometypes <biome_type> [<page>]",
 	"commands.simplyhotsprings.help.biometypes.3": "   Lists all biomes that are in the given Biome Dictionary Type.",
 	"commands.simplyhotsprings.help.placespring.0": "/simplyhotsprings placespring [<pos>]",
 	"commands.simplyhotsprings.help.placespring.1": "   Attempts to generate a Hot Spring centered at the position. If the north-west corner is air, moves down to the next solid block.",
 	"commands.simplyhotsprings.none": "None!",
+	"commands.simplyhotsprings.page_header": "--- Page %1$s of %2$s ---",
 	
 	"simplyhotsprings.gen.reason.no_world_gen": "The \"World Generation\" config option is false.",
 	"simplyhotsprings.gen.reason.in_name_whitelist": "This biome is in the \"Biome Name Whitelist\".",
