--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -48,7 +48,9 @@
 	"commands.simplyhotsprings.help.placespring.0": "/simplyhotsprings placespring [<pos>]",
 	"commands.simplyhotsprings.help.placespring.1": "   Attempts to generate a Hot Spring centered at the position. If the north-west corner is air, moves down to the next solid block.",
 	"commands.simplyhotsprings.none": "None!",
-	"commands.simplyhotsprings.page_header": "--- Page %1$s of %2$s ---",
+	"commands.simplyhotsprings.page_header": "%1$s Page %3$s of %4$s %2$s",
+	"commands.simplyhotsprings.next_page": "Next Page",
+	"commands.simplyhotsprings.previous_page": "Previous Page",
 	
 	"simplyhotsprings.gen.reason.no_world_gen": "The \"World Generation\" config option is false.",
 	"simplyhotsprings.gen.reason.in_name_whitelist": "This biome is in the \"Biome Name Whitelist\".",
