--- a/src/main/resources/assets/simplyhotsprings/lang/en_us.json
+++ b/src/main/resources/assets/simplyhotsprings/lang/en_us.json
@@ -1,31 +1,27 @@
 {
 	"item.simplyhotsprings.hot_spring_water_bucket": "Hot Spring Water Bucket",
+	"fluid_type.simplyhotsprings.hot_spring_water": "Hot Spring Water",
 	"fluid.simplyhotsprings.hot_spring_water": "Hot Spring Water",
 	"fluid.simplyhotsprings.flowing_hot_spring_water": "Flowing Hot Spring Water",
 	"block.simplyhotsprings.hot_spring_water": "Hot Spring Water",
 	
 	"commands.simplyhotsprings.locationinfo.click": "Click to put in chat box",
 	"commands.simplyhotsprings.locationinfo.biome_name": "Biome Name: ",
-	"commands.simplyhotsprings.locationinfo.biome_types": "Biome Types: ",
+	"commands.simplyhotsprings.locationinfo.biome_tags": "Biome Tags: ",
 	"commands.simplyhotsprings.locationinfo.hot_springs": "Hot Springs: ",
-	"commands.simplyhotsprings.locationinfo.reason": "Reason: ",
 	"commands.simplyhotsprings.locationinfo.yes": "Yes",
 	"commands.simplyhotsprings.locationinfo.no": "No",
-	"commands.simplyhotsprings.locationinfo.no_biome_key": "The biome at this location is unknown/unregistered!",
 	"commands.simplyhotsprings.locationinfo.biome_not_found": "Biome '%s' cannot be found",
 	"commands.simplyhotsprings.biomeslist.all": "All biomes known by Simply Hot Springs: ",
-	"commands.simplyhotsprings.biomeslist.with": "Hot Springs CAN generate in the following biomes: ",
-	"commands.simplyhotsprings.biomeslist.without": "Hot Springs CANNOT generate in the following biomes: ",
+	"commands.simplyhotsprings.biomeslist.with": "'%s' CAN generate in the following biomes: ",
+	"commands.simplyhotsprings.biomeslist.without": "'%s' CANNOT generate in the following biomes: ",
 	"commands.simplyhotsprings.biomeslist.click": "Click to check biome info",
-	"commands.simplyhotsprings.biometypes.type_not_found": "Biome Dictionary Type '%s' cannot be found",
-	"commands.simplyhotsprings.biometypes.all": "All Biome Dictionary Types: ",
-	"commands.simplyhotsprings.biometypes.biomes": "All biomes in Biome Dictionary Type '%s': ",
-	"commands.simplyhotsprings.biometypes.click": "Click to list biomes with this type",
-	"commands.simplyhotsprings.placespring.placed": "Generated a Hot Spring around %1$s %2$s %3$s. ",
-	"commands.simplyhotsprings.placespring.not_placed": "Failed to generate a Hot Spring around %1$s %2$s %3$s. ",
-	"commands.simplyhotsprings.placespring.too_low": "There wasn't enough space above the bottom of the world for the Hot Spring to generate.",
-	"commands.simplyhotsprings.placespring.failed": "Either there is a liquid above the Hot Spring or there weren't enough solid blocks to hold the Hot Spring Water.",
-	"commands.simplyhotsprings.placespring.click": "Click to teleport",
+	"commands.simplyhotsprings.biomeslist.modifier_not_found": "Hot Springs biome modifier '%s' cannot be found",
+	"commands.simplyhotsprings.biometags.tag_not_found": "Biome tag '%s' cannot be found",
+	"commands.simplyhotsprings.biometags.not_a_tag": "Tags must start with a '#'",
+	"commands.simplyhotsprings.biometags.all": "All biome tags: ",
+	"commands.simplyhotsprings.biometags.biomes": "All biomes in biome tag '%s': ",
+	"commands.simplyhotsprings.biometags.click": "Click to list biomes with this tag",
 	"commands.simplyhotsprings.help.click": "Click to see help",
 	"commands.simplyhotsprings.help.locationinfo.0": "/simplyhotsprings locationinfo",
 	"commands.simplyhotsprings.help.locationinfo.1": "   Checks your current biome and whether Hot Springs can generate there.",
@@ -36,32 +32,30 @@
 	"commands.simplyhotsprings.help.locationinfo.6": "/simplyhotsprings locationinfo <biome>",
 	"commands.simplyhotsprings.help.locationinfo.7": "   Checks the given biome and whether Hot Springs can generate there.",
 	"commands.simplyhotsprings.help.biomeslist.0": "/simplyhotsprings biomeslist all [<page>]",
-	"commands.simplyhotsprings.help.biomeslist.1": "   Lists all biomes known by Simply Hot Springs.",
-	"commands.simplyhotsprings.help.biomeslist.2": "/simplyhotsprings biomeslist with [<page>]",
-	"commands.simplyhotsprings.help.biomeslist.3": "   Lists all biomes known by Simply Hot Springs that CAN generate Hot Springs.",
-	"commands.simplyhotsprings.help.biomeslist.4": "/simplyhotsprings biomeslist without [<page>]",
-	"commands.simplyhotsprings.help.biomeslist.5": "   Lists all biomes known by Simply Hot Springs that CANNOT generate Hot Springs.",
-	"commands.simplyhotsprings.help.biometypes.0": "/simplyhotsprings biometypes [<page>]",
-	"commands.simplyhotsprings.help.biometypes.1": "   Lists all Biome Dictionary Types.",
-	"commands.simplyhotsprings.help.biometypes.2": "/simplyhotsprings biometypes <biome_type> [<page>]",
-	"commands.simplyhotsprings.help.biometypes.3": "   Lists all biomes that are in the given Biome Dictionary Type.",
-	"commands.simplyhotsprings.help.placespring.0": "/simplyhotsprings placespring [<pos>]",
-	"commands.simplyhotsprings.help.placespring.1": "   Attempts to generate a Hot Spring centered at the position. If the north-west corner is air, moves down to the next solid block.",
+	"commands.simplyhotsprings.help.biomeslist.1": "   Lists all biomes known by Simply Hot Springs. If Hot Springs are off, it fails.",
+	"commands.simplyhotsprings.help.biomeslist.2": "/simplyhotsprings biomeslist with <modifier> [<page>]",
+	"commands.simplyhotsprings.help.biomeslist.3": "   Lists all biomes known by Simply Hot Springs that CAN generate the given kind of Hot Springs.",
+	"commands.simplyhotsprings.help.biomeslist.4": "/simplyhotsprings biomeslist without <modifier> [<page>]",
+	"commands.simplyhotsprings.help.biomeslist.5": "   Lists all biomes known by Simply Hot Springs that CANNOT generate the given kind of Hot Springs.",
+	"commands.simplyhotsprings.help.biometags.0": "/simplyhotsprings biometags [<page>]",
+	"commands.simplyhotsprings.help.biometags.1": "   Lists all biome tags.",
+	"commands.simplyhotsprings.help.biometags.2": "/simplyhotsprings biometags <biome_tag> [<page>]",
+	"commands.simplyhotsprings.help.biometags.3": "   Lists all biomes that are in the given biome tag.",
+	"commands.simplyhotsprings.help.place.0": "/place feature simplyhotsprings:hot_springs_default",
+	"commands.simplyhotsprings.help.place.1": "   You can place Hot Springs with '/place feature simplyhotsprings:hot_springs_default'. If it fails to place, try standing on the ground and make sure to have solid blocks to the south-east and below you. Also, there are some configured Hot Spring examples that don't generate.",
 	"commands.simplyhotsprings.none": "None!",
 	"commands.simplyhotsprings.page_header": "%1$s Page %3$s of %4$s %2$s",
 	"commands.simplyhotsprings.next_page": "Next Page",
 	"commands.simplyhotsprings.previous_page": "Previous Page",
-	
-	"simplyhotsprings.gen.reason.no_world_gen": "The \"World Generation\" config option is false.",
-	"simplyhotsprings.gen.reason.in_name_whitelist": "This biome is in the \"Biome Name Whitelist\".",
-	"simplyhotsprings.gen.reason.in_name_blacklist": "This biome is in the \"Biome Name Blacklist\".",
-	"simplyhotsprings.gen.reason.in_type_blacklist": "This biome has a type in the \"Biome Type Blacklist\".",
-	"simplyhotsprings.gen.reason.in_type_whitelist": "This biome has a type in the \"Biome Type Whitelist\".",
-	"simplyhotsprings.gen.reason.empty_name_whitelist": "This biome isn't in any blacklists, and the \"Biome Name Whitelist\" is empty.",
-	"simplyhotsprings.gen.reason.empty_type_whitelist": "This biome isn't in any blacklists, and the \"Biome Type Whitelist\" is empty.",
-	"simplyhotsprings.gen.reason.not_whitelisted": "This biome was excluded by whitelists.",
+		
+	"simplyhotsprings.gen.reason.no_world_gen_config": "This Hot Spring is disabled in the config.",
+	"simplyhotsprings.gen.reason.whitelisted": "This biome is whitelisted for this Hot Spring.",
+	"simplyhotsprings.gen.reason.blacklisted": "This biome is blacklisted for this Hot Spring.",
+	"simplyhotsprings.gen.reason.not_whitelisted": "This biome is not whitelisted for this Hot Spring.",
+	"simplyhotsprings.gen.reason.not_blacklisted": "This biome is not blacklisted for this Hot Spring.",
+	"simplyhotsprings.gen.reason.no_hot_springs": "No Hot Springs have been added to biomes!",
 	"simplyhotsprings.gen.reason.unknown_biome": "Unknown biome!",
-	"simplyhotsprings.gen.reason.register_error": "The Hot Spring placed feature failed to register! Report this bug!",
+	"simplyhotsprings.gen.reason.unknown_modifier": "Unknown biome modifier!",
 	
 	"simplyhotsprings.config.createsSources": "Creates Source Blocks",
 	"simplyhotsprings.config.createsSources.tooltip": "If true, Hot Spring Water makes infinite water sources, like vanilla water does.",
@@ -72,23 +66,17 @@
 	"simplyhotsprings.config.potionEffectAmplifier": "Potion Effect Amplifier",
 	"simplyhotsprings.config.potionEffectAmplifier.tooltip": "The amplifier of the effect. 0 is level 1.",
 	"simplyhotsprings.config.worldgen": "World Generation",
-	"simplyhotsprings.config.worldgen.tooltip": "Most of these settings require any open world to be closed and reopened.",
-	"simplyhotsprings.config.worldgen.info": "#HOW TO FILL WHITELISTS AND BLACKLISTS",
-	"simplyhotsprings.config.worldgen.info.tooltip": "The command \"/simplyhotsprings\" has a few subcommands that will help you fill in your whitelists and blacklists and test to see if they work. For example, \"/simplyhotsprings locationinfo\" will tell you the name and types of the biome you're currently in and whether Hot Springs can generate there. To see how to use \"/simplyhotsprings\", run the command \"/simplyhotsprings help\". \n(Also, this config setting does nothing, so put whatever you want in here.)",
-	"simplyhotsprings.config.worldgen.worldGen": "World Generation",
-	"simplyhotsprings.config.worldgen.worldGen.tooltip": "Set to false to stop Hot Springs from generating. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
-	"simplyhotsprings.config.worldgen.chance": "Generation Chance",
-	"simplyhotsprings.config.worldgen.chance.tooltip": "The chance for a Hot Spring to generate is 1 over this value. So lower values are more likely. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
+	"simplyhotsprings.config.worldgen.tooltip": "Some of these settings require any open world to be closed and reopened.",
+	"simplyhotsprings.config.worldgen.info": "#HOW TO",
+	"simplyhotsprings.config.worldgen.info.tooltip": "The command \"/simplyhotsprings\" has a few subcommands that will help you test your Hot Springs. For example, \"/simplyhotsprings locationinfo\" will tell you the name and tags of the biome you're currently in and whether Hot Springs can generate there. To see how to use \"/simplyhotsprings\", run the command \"/simplyhotsprings help\". \nNEW: You can now create custom Hot Springs with datapacks. To see how, visit the wiki at https://github.com/connor135246/Simply-Hot-Springs/wiki \n(Also, this config setting does nothing, so put whatever you want in here.)",
+	"simplyhotsprings.config.worldgen.worldGenDefault": "Enable \"Default\" Hot Springs",
+	"simplyhotsprings.config.worldgen.worldGenDefault.tooltip": "Controls whether \"default\" Hot Springs generate. \nThese are the normal Hot Springs. They look just like vanilla's pre-1.18 water lakes. They generate on the surface in most biomes and are somewhat rare. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
+	"simplyhotsprings.config.worldgen.worldGenBig": "Enable \"Big\" Hot Springs",
+	"simplyhotsprings.config.worldgen.worldGenBig.tooltip": "Controls whether \"big\" Hot Springs generate. \nThese look like the normal Hot Springs, but are much wider and deeper. They're also rarer than normal Hot Springs. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
+	"simplyhotsprings.config.worldgen.worldGenWellsprings": "Enable \"Wellspring\" Hot Springs",
+	"simplyhotsprings.config.worldgen.worldGenWellsprings.tooltip": "Controls whether \"wellspring\" and \"big_wellspring\" Hot Springs generate. \nWellsprings are geysers of Hot Spring Water that flow out of the ground. Follow them underground to find large pockets of Hot Spring Water. Big wellsprings are rarer and may have lava lakes below them. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
 	"simplyhotsprings.config.worldgen.debug": "Generation Debug",
 	"simplyhotsprings.config.worldgen.debug.tooltip": "When a Hot Spring generates in the world, prints the location to console.",
-	"simplyhotsprings.config.worldgen.biomeTypeWhitelist": "Biome Type Whitelist",
-	"simplyhotsprings.config.worldgen.biomeTypeWhitelist.tooltip": "The biome types where Hot Springs are allowed to generate. If empty, all biome types are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
-	"simplyhotsprings.config.worldgen.biomeTypeBlacklist": "Biome Type Blacklist",
-	"simplyhotsprings.config.worldgen.biomeTypeBlacklist.tooltip": "The biome types where Hot Springs are NOT allowed to generate. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
-	"simplyhotsprings.config.worldgen.biomeNameWhitelist": "Biome Name Whitelist",
-	"simplyhotsprings.config.worldgen.biomeNameWhitelist.tooltip": "The individual biomes where Hot Springs are allowed to generate. If empty, all biomes are allowed. \nThe Biome Type Whitelist and Biome Name Whitelist are not both required to be satisfied. You can use a period as a dummy entry. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
-	"simplyhotsprings.config.worldgen.biomeNameBlacklist": "Biome Name Blacklist",
-	"simplyhotsprings.config.worldgen.biomeNameBlacklist.tooltip": "The individual biomes where Hot Springs are NOT allowed to generate. \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
 	"simplyhotsprings.config.worldgen.biomeGrasses": "Biome Grasses",
 	"simplyhotsprings.config.worldgen.biomeGrasses.tooltip": "A list of biomes and their specific types of grass. \nBy default, dirt around Hot Springs will be turned into grass. But some biomes have their own specific grass type which you need to tell Simply Hot Springs about. \nThe format is \"modid:biome;modid:block[states]\". \nIf you change this setting with a world open, it must be closed and reopened for the changes to take effect.",
 	"simplyhotsprings.config.client.alternateParticles": "Alternate Particles",
